fixes for box alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,3 +21,8 @@ body {
   text-decoration: 'none';
   color: white;
 }
+
+.squished {
+  max-width: 300px;
+  width: 400px;
+}
